--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -25,6 +25,8 @@ script(src="/bower_components/uri-templates/uri-templates.js")
 script(src="/bower_components/backbone-relational-hal/backbone-relational-hal.js")
 script(src="/bower_components/toastr/toastr.js")  
 script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
+script(src="/bower_components/flexslider/jquery.flexslider.js")
+
 // endbuild
 
 // build:js(.) /scripts/live.js
