--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -1,8 +1,7 @@
-div#content-holder
-  div#header
-    header#navigation
-    #submenu
-  main#main
+div#header
+  div#navigation
+  #submenu
+main#main
 footer#footer
 div#loginmodal
 #dialog
