--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -1,5 +1,5 @@
 script#header-tpl(type="text/template")
-  a.active.item(href="/")
+  a.active.purple.item(href="/")
     i.home.icon 
     | 汇心网
   .right.menu
@@ -8,7 +8,7 @@ script#header-tpl(type="text/template")
     a.item(href="/register") 注册
 
 script#headerlogin-tpl(type="text/template")
-  a.active.item(href="/")
+  a.active.purple.item(href="/")
     i.home.icon 
     | 汇心网
   div#adminentry.right.menu
