change page layout and Article entity

--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -20,3 +20,4 @@ include ./templates/logout
 include ./templates/appointment
 include ./templates/courses
 include ./templates/common_tpl
+include ./templates/pagelayout
