--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -40,18 +40,33 @@ content-holder{
 
 @media screen and (max-device-width: 480px) {
   #main {
-  width: 90%;
-  margin: 0 auto;
-}  
+    width: 100%;
+    margin: 0 auto;
+  }  
+  .right.rail {
+    display: none;
+  }
+  .container {
+    width: 100%;
+    position: relative;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (min-device-width: 480px) {
   #main {
-  width: 60%;
-  margin: 0 auto;
-}  
+    width: 100%;
+    margin: 0 auto;
+  } 
+  .container {
+    width: ~"calc(100% - 325px)";
+    position: relative;
+    margin: 0 auto;
+  }
+  #categroynav {
+    //display: none;
+  }
 }
-
 
 article {
   padding: 1rem;
