static course list page initial checkin

--- a/dionysus-client/yo/app/jade/templates/courses.jade
+++ b/dionysus-client/yo/app/jade/templates/courses.jade
@@ -9,7 +9,7 @@ script#course-list-item-tpl(type="text/template")
       p <%= description %>
     .extra
       .ui.label 状态
-      a.ui.label(href!="/course/registration/<%= id %>") 注册
+      a.ui.label(href!="/courses/<%= id %>/reg") 注册课程
 
 
 script#course-item-detail-tpl(type="text/template")
