static course list page

--- a/dionysus-client/yo/app/static/course-list.jade
+++ b/dionysus-client/yo/app/static/course-list.jade
@@ -166,7 +166,8 @@ html
             a.ui.blue.label(style="margin-right:10;") 情绪管理
           .part2(style="margin-top:10;")
             a.ui.black.label(style="margin-right:10;") 发泄
-            a.ui.teal.label 悄悄话
+            a.ui.teal.label(style="margin-right:10;") 悄悄话
+            a.ui.orange.label 专业
 
 
 
