static course detail page

--- a/dionysus-client/yo/app/static/course-detail.jade
+++ b/dionysus-client/yo/app/static/course-detail.jade
@@ -27,14 +27,21 @@ html
           .ui.divider
           h3
             a 授课老师及特邀嘉宾介绍
-          .consultant(style="float:left;")
-            .item
-              .ui.small.image(style="float:left;")
-                img(src="./img/consultant.jpg")
-              .middle.aligned.content
-                p(style="font-size:12px") 八年大型上市企业高管经验，汇心网资深讲师，尤其在公司战略，企业文化方面有着很深的认识和及其丰富的经验
-          .ui.divider("style=clear:left;")
-
+          .consultant(style="padding-top:20")
+            .ui.divided.items
+              .item
+                .ui.tiny.image
+                  img(src="./img/consultant.jpg")
+                .content
+                  p(style="font-size:12px") 八年大型上市企业高管经验，汇心网资深讲师，尤其在公司战略，企业文化方面有着很深的认识和及其丰富的经验
+              .item
+                .ui.tiny.image
+                  img(src="./img/consultant.jpg")
+                .content
+                  p(style="font-size:12px") 八年大型上市企业高管经验，汇心网资深讲师，尤其在公司战略，企业文化方面有着很深的认识和及其丰富的经验
+          .ui.divider
+          h3
+            a 授课时间与地点
 
       .four.wide.column
         .ui.segment
