static course detail page

--- a/dionysus-client/yo/app/static/course-detail.jade
+++ b/dionysus-client/yo/app/static/course-detail.jade
@@ -42,6 +42,8 @@ html
           .ui.divider
           h3
             a 授课时间与地点
+          .ui.divider
+          .big.ui.purple.button 注册
 
       .four.wide.column
         .ui.segment
