new article page

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -21,6 +21,7 @@ html(class="no-js")
   // build:js({app,.tmp}) /scripts/app.js
   script(src="/scripts/app.js")
   script(src="/scripts/modules/commonUtils.js")
+  script(src="/scripts/modules/layoutviews.js")  
   script(src="/scripts/hal/domain.js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
@@ -31,6 +32,7 @@ html(class="no-js")
   script(src="/scripts/common/appointment.js")
   script(src="/scripts/common/user.js")
   script(src="/scripts/common/course.js")
+  script(src="/scripts/common/category.js")
   script(src="/scripts/consultant/consultant.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
@@ -45,6 +47,7 @@ html(class="no-js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
   script(src="/scripts/modules/course.js")
+
   // endbuild
   
   script
