--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -6,16 +6,16 @@ main {
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 1rem;
-  padding-bottom: 150px;
+  padding-bottom: 60px;
 }
 
 .jumbotron {
-  background-image: url(/public/images/bg.jpg);
+  background-image: url(/public/images/site1.jpg);
   background-size: cover;
 }
 
 .ui.grid.jumbotron .dialogue{
-  padding-top:4rem;
+  padding-top:16rem;
 }
 
 body {
@@ -63,8 +63,11 @@ content-holder{
     position: relative;
     margin: 0 auto;
   }
-  #categroynav {
-    //display: none;
+  .jumbotron {
+    height: 400px;
+  }
+  .dialogue {
+    padding-top: 8rem;
   }
 }
 
