--- a/dionysus-client/yo/app/jade/templates/site.jade
+++ b/dionysus-client/yo/app/jade/templates/site.jade
@@ -1,38 +1,42 @@
 script#site-tpl(type="text/template")
-	.ui.grid.jumbotron
+	.ui.stackable.equal.height.grid.jumbotron
 		.eight.wide.column
 			img(src="/public/images/logo.png")
 		.eight.wide.column.dialogue
-			.ui.inverted.header
+			.ui.header
 				h1 汇心网，关怀无处不在
 				p 这个全世界最专业的中文心理网站，集专业与娱乐于一体与您贴心相伴，随时，随地，随心。
-	.ui.four.column.divided.grid
-		.row
-			.column
+	.ui.divider
+	.ui.four.doubling.cards
+		.blue.card
+			.content
 				.ui.icon.header 心理知识
 					i.circular.book.icon
-				p 心理广播／文章／音视频
-				p
-					a.ui.labled.icon.button(href="/articles") 进入
-						i.arrow.right.icon
-			.column
+				.description 心理广播／文章／音视频
+			.ui.bottom.attached.button
+				a(href="/articles") 进入
+					i.arrow.right.icon
+		.red.card
+			.content
 				.ui.icon.header 在线心理咨询
 					i.circular.chat.icon
-				p 在线一对一心理咨询预约
-				p
-					a.ui.labled.icon.button(href="/consultants") 建设中
-						i.lock.icon
-			.column
-				.ui.icon.header 心理科课程
+				.description 在线一对一心理咨询预约
+			.ui.bottom.attached.button
+				a(href="/consultants") 进入
+					i.arrow.right.icon
+		.purple.card
+			.content
+				.ui.icon.header 心理科课程	
 					i.circular.users.icon
-				p 线下课程／线上课程／录制课程
-				p
-					a.ui.labled.icon.button(href="/courses") 进入
-						i.lock.icon
-			.column
+				.description 线下课程／线上课程／录制课程
+			.ui.bottom.attached.button
+				a(href="/courses") 进入
+					i.arrow.right.icon
+		.green.card
+			.content
 				.ui.icon.header 心理测试
 					i.circular.question.icon
-				p 在线心理测试
-				p
-					a.ui.labled.icon.button(href="#") 建设中
-						i.lock.icon
+				.description 在线心理测试
+			.ui.bottom.attached.button
+				a(href="#") 建设中
+					i.lock.icon		
