--- a/dionysus-client/yo/app/consultant.jade
+++ b/dionysus-client/yo/app/consultant.jade
@@ -7,6 +7,7 @@ html(class="no-js")
     link(rel="shortcut icon", href="/favicon.ico")
 
     // build:css({.,.tmp}) /styles/consultant.css
+    link(rel="stylesheet", href="/styles/semantic.css")
     link(rel="stylesheet", href="/styles/main.css")
     // endbuild
   body
