--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -24,6 +24,7 @@ html(class="no-js")
   script(src="/scripts/modules/commonUtils.js")
   script(src="/scripts/modules/layoutviews.js")  
   script(src="/scripts/hal/domain.js")
+  script(src="/scripts/hal/psychtests.js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
   script(src="/scripts/common/module.js")
