--- a/dionysus-client/yo/app/static/course-registration.jade
+++ b/dionysus-client/yo/app/static/course-registration.jade
@@ -10,7 +10,7 @@ html
           p(style="color:#FFF;text-align:center;") 顶部导航菜单
     .ui.two.column.centered.grid(style="margin-top:60;")
       .twelve.wide.column
-        form.ui.form.segment(style="padding-top:50;padding-bottom:30;")
+        form.ui.form.segment(style="padding-left:30;padding-right:30;padding-top:50;padding-bottom:30;")
           h3
             a 请填写您的真实信息
           .ui.divider(style="margin-top:20;")
@@ -34,25 +34,10 @@ html
               .ui.left.icon.input
                 input(type="text")
                 i.mail.icon
-          .ui.submit.purple.button(style="margin-top:30;") 注册课程
-      .four.wide.column
-        .ui.segment
-          a.ui.purple.right.ribbon.label 课程内容
-          .ui.divider
-          .ui.link.list
-            a.active.item(style="text-align:center;margin-bottom:5;font-size:1.4em;") 职场发展
-            a.item(style="text-align:center;margin-bottom:5;font-size:1.1em;") 两性心理
-            a.item(style="text-align:center;margin-bottom:5;font-size:1.1em;") 亲子活动
-            a.item(style="text-align:center;margin-bottom:5;font-size:1.1em;") 情绪管理
-            a.item(style="text-align:center") 心理百科
-        .ui.segment
-          a.ui.purple.right.ribbon.label 热门标签
-          .ui.divider
-          .part1
-            a.ui.purple.label(style="margin-right:10;") 爱情
-            a.ui.green.label(style="margin-right:10;") 心灵
-            a.ui.blue.label(style="margin-right:10;") 情绪管理
-          .part2(style="margin-top:10;")
-            a.ui.black.label(style="margin-right:10;") 发泄
-            a.ui.teal.label(style="margin-right:10;") 悄悄话
-            a.ui.orange.label 专业
+          .two.fields(style="margin-top:20;margin-bottom:20;")
+            .field
+              label 联系电话
+              .ui.left.icon.input
+                input(type="text")
+                i.call.icon
+          .ui.submit.purple.button(style="margin-top:30;") 提交
