static course page

--- a/dionysus-client/yo/app/static/course-detail.jade
+++ b/dionysus-client/yo/app/static/course-detail.jade
@@ -47,20 +47,31 @@ html
 
       .four.wide.column
         .ui.segment
-          a.ui.purple.right.ribbon.label 课程内容
+          a.ui.purple.right.ribbon.label 更多热门课程
           .ui.divider
           .ui.link.list
-            a.active.item(style="text-align:center;margin-bottom:5;font-size:1.4em;") 职场发展
-            a.item(style="text-align:center;margin-bottom:5;font-size:1.1em;") 两性心理
-            a.item(style="text-align:center;margin-bottom:5;font-size:1.1em;") 亲子活动
-            a.item(style="text-align:center;margin-bottom:5;font-size:1.1em;") 情绪管理
-            a.item(style="text-align:center") 心理百科
+              .active.item(style="margin-bottom:5;font-size:1.1em;")
+                a 如何控制自己？
+                span(style="float:right;")
+                  i.caret.right.icon
+              .item(style="margin-bottom:5;font-size:1.1em;")
+                a 如何做个慈父严母？
+                span(style="float:right;")
+                  i.caret.right.icon
+              .item(style="margin-bottom:5;font-size:1.1em;")
+                a 如何让自己内心平静？
+                span(style="float:right;")
+                  i.caret.right.icon
+              .item(style="margin-bottom:5;font-size:1.1em;")
+                a 如何克服拖延症？
+                span(style="float:right;")
+                  i.caret.right.icon
         .ui.segment
           a.ui.purple.right.ribbon.label 热门标签
           .ui.divider
           .part1
             a.ui.purple.label(style="margin-right:10;") 爱情
-            a.ui.green.label(style="margin-right:10;") 心灵
+            a.ui.;green.label(style="margin-right:10;") 心灵
             a.ui.blue.label(style="margin-right:10;") 情绪管理
           .part2(style="margin-top:10;")
             a.ui.black.label(style="margin-right:10;") 发泄
