fix static course page

--- a/dionysus-client/yo/app/static/course-detail.jade
+++ b/dionysus-client/yo/app/static/course-detail.jade
@@ -71,7 +71,7 @@ html
           .ui.divider
           .part1
             a.ui.purple.label(style="margin-right:10;") 爱情
-            a.ui.;green.label(style="margin-right:10;") 心灵
+            a.ui.green.label(style="margin-right:10;") 心灵
             a.ui.blue.label(style="margin-right:10;") 情绪管理
           .part2(style="margin-top:10;")
             a.ui.black.label(style="margin-right:10;") 发泄
