update client side javascript to use latest restful api

--- a/dionysus-client/yo/app/jade/templates/site.jade
+++ b/dionysus-client/yo/app/jade/templates/site.jade
@@ -38,5 +38,5 @@ script#site-tpl(type="text/template")
 					i.circular.question.icon
 				.description 在线心理测试
 			.ui.bottom.attached.button
-				a(href="/testsets") 进入
+				a(href="/psychtestsuites") 进入
 					i.lock.icon		
