Introduce Handlebar Template Engine

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -20,6 +20,7 @@ html(class="no-js")
   include ./jade/_library
 
   // build:js({app,.tmp}) /scripts/app.js
+  script(src="/templates/precompiled.handlebars.home.js")
   script(src="/scripts/app.js")
   script(src="/scripts/modules/commonUtils.js")
   script(src="/scripts/modules/layoutviews.js")  
