update psychtest style

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -1,6 +1,6 @@
 main {
   display: block;
-  min-height: 500px;
+  min-height: 450px;
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 1rem;
@@ -76,6 +76,10 @@ article {
   min-height: 10rem;
 }
 
-.test-item-option-selected {
-  background-color:#f0f0f0;
+
+
+.psychtest {
+  max-width: 960px;
+  margin: 0 auto;
 }
+
