--- a/dionysus-client/yo/templates/home/psychtests/question.jade
+++ b/dionysus-client/yo/templates/home/psychtests/question.jade
@@ -1,9 +1,10 @@
-.label {{ description }}
-.options
-  {{#each options}}
-  .ui.basic.segment
-    .ui.radio.checkbox
-      input(type="radio", name="choice", value="{{id}}")
-      label {{ description }}
-  {{/each}}
+.ui.form.large.options
+  .grouped.fields
+    .label {{ description }}
+    {{#each options}}
+    .field
+      .ui.radio.checkbox
+        input(type="radio", name="choice", value="{{id}}", id="option-{{id}}")
+        label(for="option-{{id}}") {{ description }}
+    {{/each}}
   
