update link styles

--- a/dionysus-client/yo/templates/home/modules/module.jade
+++ b/dionysus-client/yo/templates/home/modules/module.jade
@@ -1,4 +1,4 @@
-a.image(href=="{{ href }}")
+a.image(href="{{ href }}")
   img(src="{{ image }}")
 .content
   a.header(href="{{ href }}") {{ title }}
