--- a/dionysus-client/yo/templates/home/site.jade
+++ b/dionysus-client/yo/templates/home/site.jade
@@ -12,30 +12,26 @@
       .ui.icon.header 心理知识
         i.circular.book.icon
       .description 心理广播／文章／音视频
-    .ui.bottom.attached.button
-      a(href="/articles") 进入
-        i.arrow.right.icon
+    a.ui.bottom.attached.button(href="/articles") 进入
+      i.arrow.right.icon
   .red.card
     .content
       .ui.icon.header 在线心理咨询
         i.circular.chat.icon
       .description 在线一对一心理咨询预约
-    .ui.bottom.attached.button
-      a(href="/consultants") 进入
-        i.arrow.right.icon
+    a.ui.bottom.attached.button(href="/consultants") 进入
+      i.arrow.right.icon
   .purple.card
     .content
       .ui.icon.header 心理科课程 
         i.circular.users.icon
       .description 线下课程／线上课程／录制课程
-    .ui.bottom.attached.button
-      a(href="/courses") 进入
-        i.arrow.right.icon
+    a.ui.bottom.attached.button(href="/courses") 进入
+      i.arrow.right.icon
   .green.card
     .content
       .ui.icon.header 心理测试
         i.circular.question.icon
       .description 在线心理测试
-    .ui.bottom.attached.button
-      a(href="/psychtestsuites") 进入
-        i.lock.icon 
+    a.ui.bottom.attached.button(href="/psychtestsuites") 进入
+      i.arrow.right.icon
