update template characters

--- a/dionysus-client/yo/templates/home/account.jade
+++ b/dionysus-client/yo/templates/home/account.jade
@@ -14,8 +14,8 @@
   .ui.checkbox
     input(type="checkbox", name="terms")
     label
-      | I agree to the 
-      a(href="#") Term of Service
+      | 了解并同意
+      a(href="#") 用户协议
 .field
   .ui.checkbox
     input(type="checkbox", name="consultant")
@@ -26,4 +26,4 @@
   span
     | 已经有账号
     a#login(href="#") 登陆
-input.ui.submit.button(type="submit", value="注册")
+input.ui.submit.primary.button(type="submit", value="注册")
