--- a/dionysus-client/yo/templates/home/site.jade
+++ b/dionysus-client/yo/templates/home/site.jade
@@ -5,33 +5,38 @@
     .ui.header
       h1 汇心网，关怀无处不在
       p 这个全世界最专业的中文心理网站，集专业与娱乐于一体与您贴心相伴，随时，随地，随心。
+
 .ui.divider
+
 .ui.four.doubling.cards
-  .blue.card
+  a.blue.card(href="/articles")
     .content
       .ui.icon.header 心理知识
         i.circular.book.icon
       .description 心理广播／文章／音视频
-    a.ui.bottom.attached.button(href="/articles") 进入
+    .ui.bottom.attached.button 进入
       i.arrow.right.icon
-  .red.card
+
+  a.red.card(href="/consultants")
     .content
       .ui.icon.header 在线心理咨询
         i.circular.chat.icon
       .description 在线一对一心理咨询预约
-    a.ui.bottom.attached.button(href="/consultants") 进入
+    .ui.bottom.attached.button 进入
       i.arrow.right.icon
-  .purple.card
+
+  a.purple.card(href="/courses")
     .content
       .ui.icon.header 心理科课程 
         i.circular.users.icon
       .description 线下课程／线上课程／录制课程
-    a.ui.bottom.attached.button(href="/courses") 进入
+    .ui.bottom.attached.button 进入
       i.arrow.right.icon
-  .green.card
+
+  a.green.card(href="/psychtestsuites")
     .content
       .ui.icon.header 心理测试
         i.circular.question.icon
       .description 在线心理测试
-    a.ui.bottom.attached.button(href="/psychtestsuites") 进入
+    .ui.bottom.attached.button 进入
       i.arrow.right.icon
