--- a/dionysus-client/yo/templates/home/footer.jade
+++ b/dionysus-client/yo/templates/home/footer.jade
@@ -1,6 +1,20 @@
 .ui.segment
-  ul
-    li 联系方式：XXXXXX
-    li 关于我们
-    li 备案号
-  &copy; 2015 版权申明
+	.ui.three.column.divided.center.aligned.stackable.grid
+		.ui.equal.height.row
+			.column
+				p 联系方式：XXXXXX
+				p 
+					a 关于我们
+				p 
+					a 备案号:xxxxx
+				p &copy; 2015 版权申明
+			.column
+				p
+					a 心理服务小站
+				p
+					a 心理学院
+			.column
+				p
+					a 客服 800-123-12
+				p
+					a 投诉与建议
