add button to submit test suite

--- a/dionysus-client/yo/app/jade/templates/profile.jade
+++ b/dionysus-client/yo/app/jade/templates/profile.jade
@@ -30,6 +30,10 @@ script#profile-mytests-tpl(type="text/template")
 script#profile-myarticles-tpl(type="text/template")
   .row
     .column
+      .ui.primary.button ＋新文章
+      .ui.divider
+  .row
+    .column
       .ui.items
         .item
           .ui.small.image
