--- a/dionysus-client/yo/templates/home/psychtests/suite.jade
+++ b/dionysus-client/yo/templates/home/psychtests/suite.jade
@@ -8,3 +8,4 @@
       .content
         a.header(title="{{ description }}", href="/psychtest/{{ id }}") {{title}}
     {{/each}}
+  .ui.bottom.attached.button 提交套餐
